--- a/src/main/java/br/com/infox/telas/TelaUsuario.form
+++ b/src/main/java/br/com/infox/telas/TelaUsuario.form
@@ -42,8 +42,8 @@
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="txtUsuId" min="-2" max="-2" attributes="0"/>
                           <Component id="txtUsuNome" min="-2" pref="251" max="-2" attributes="0"/>
+                          <Component id="txtUsuId" min="-2" pref="72" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -183,8 +183,6 @@
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
     </Component>
-    <Component class="javax.swing.JTextField" name="txtUsuId">
-    </Component>
     <Component class="javax.swing.JPasswordField" name="txtUsuSenha">
     </Component>
     <Component class="javax.swing.JLabel" name="lblUsuCriar">
@@ -206,6 +204,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/br/com/infox/icones/read.png"/>
         </Property>
+        <Property name="toolTipText" type="java.lang.String" value="Pesquisar"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[80, 80]"/>
         </Property>
@@ -238,6 +237,8 @@
           <Dimension value="[80, 80]"/>
         </Property>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="txtUsuId">
     </Component>
   </SubComponents>
 </Form>
